templates/aws-cloudtrail-collector-tpl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-<intergation_id>
  namespace: tenant-<tenant_id>
  annotations:
    tenant: <tenant_id>
    collector: <intergation_id>
    type: aws
spec:
  selector:
    app: aws-<intergation_id>
  ports:
  - port: 8080
    targetPort: 8080
